--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ nav.open {
    height: clamp(4rem, 4vh, 9rem);
    border-radius: var(--radius-md);
    border: 4px solid black;
+   color: var(--color-bg);
    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.3);
    padding: 1rem;
    transition: transform .5s ease;
@@ -436,16 +437,17 @@ h3 {
 }
 
 .image-con {
-   background-color: var(--color-border);
    align-self: center;
    max-width: clamp(20rem, 40svw, 28rem);
    width: 100%;
    min-height: 30rem;
 }
 
-.image-con img {
+img{
    width: 100%;
-   height: auto;
+   height: 100%;
+   border-radius: 12px;
+   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 @media (max-width: 800px) {
@@ -509,7 +511,7 @@ h3 {
    max-width: 100vw;
    width: 100%;
    min-height: 3rem;
-   border: 4px solid;
+   border: 4px solid var(--color-bg);
    padding: 1rem;
    grid-column: 1 / -1;
 }
@@ -517,6 +519,7 @@ h3 {
 .view-more-btn span {
    border-bottom: 2px solid;
    padding: .25rem 1.5rem;
+   color: #111111;
 }
 
 .con-hidden {
@@ -664,10 +667,12 @@ h6 {
    border-top: 2px solid;
    width: 50%;
    font-size:var(--fs-lg);
+   display: flex;
+   flex-direction: column;
+   align-items: center;
 }
 
 .service-sec-text p {
-   justify-self: center;
    letter-spacing: .25rem;
    padding-top: var(--space-xs);
    line-height: .5;
